# Realtime-BlackholeSimulator

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  blackhole.h  cgl_shader.cpp  cgl_shader.h  draw_texture.h  index.html  main.cpp  tools.cpp  tools.h
Blackhole/Blackhole/: main.cpp
Blackhole/Blackhole.xcodeproj/: project.pbxproj
Blackhole/Blackhole.xcodeproj/project.xcworkspace/xcuserdata/minxingchen.xcuserdatad/: UserInterfaceState.xcuserstate
Blackhole/Blackhole.xcodeproj/xcuserdata/minxingchen.xcuserdatad/xcschemes/: xcschememanagement.plist
